[package]
name = "lash"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/jianshu93/lash"
keywords = ["genome", "MinHash", "sketch", "HyperLogLog"]
license = "MIT OR Apache-2.0"
description = "Genome/Metagenome sketching via HyperMinHash and UltraLogLog"



[dependencies]
clap = "4.3"
needletail = "0.6.0"
rayon = "1.5"
crossbeam-channel = "0.5"
xxhash-rust = "0.8"
hyperminhash = {version = "0.1.3", features = ["serialize"]}
log = { version = "0.4" }
env_logger = { version = "0.11" }
byteorder = { version = "1.5", optional = true }
serde_json = "1.0"
kmerutils = "0.0.14"
## kmerutils = { git = "https://github.com/jianshu93/kmerutils.git"}
ultraloglog = "0.1.3"
## ultraloglog = { git = "https://github.com/waynexia/ultraloglog" , features = ["serde"] }
num_cpus = "1.13"
zstd = "0.13"