[package]
name = "lash-rs"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/jianshu93/lash"
keywords = ["genome", "MinHash", "sketch", "HyperLogLog"]
license = "MIT OR Apache-2.0"
description = "Genome/Metagenome sketching via, HyperLogLog, HyperMinHash and UltraLogLog"

[[bin]]

name = "lash"
path = "src/main.rs"


[dependencies]
clap = "4.3"
needletail = "0.6.0"
rayon = "1.5"
hashbrown = { version = "0.15", features = ["rayon", "serde"]}
hashers = "1.0"
crossbeam-channel = "0.5"
xxhash-rust = "0.8"
hyperminhash = {version = "0.1.3", features = ["serialize"]}
log = { version = "0.4" }
env_logger = { version = "0.11" }
byteorder = { version = "1.5", optional = true }
serde_json = "1.0"
## streaming_algorithms = { git = "https://github.com/jianshu93/streaming_algorithms.git" }
streaming_algorithms = {version = "0.3.3", features = ["serde"]}
kmerutils = "0.0.14"
## kmerutils = { git = "https://github.com/jianshu93/kmerutils.git"}
ultraloglog = { version = "0.1.3" , features = ["serde"]}
## ultraloglog = { git = "https://github.com/waynexia/ultraloglog", features = ["serde"] }
num_cpus = "1.13"
zstd = { version = "0.13", features = ["zstdmt"] }